--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "gitea-autotag",
+  "name": "gitea-autorelease",
   "version": "1.0.0",
   "description": "Automatically create a tag whenever the version changes in file version",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "ncc build ./src/main.js -o dist"
+    "package": "ncc build ./src/index.js -o dist && ncc build ./src/tagger.js -o dist/tagger && ncc build ./src/logger.js -o dist/logger && ncc build ./src/releaser.js -o dist/releaser"
   },
   "author": "Al Azhar",
   "license": "ISC",
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "crypto-js": "^4.2.0",
     "gitea-js": "^1.22.0",
-    "semver": "^7.6.3"
+    "glob": "^11.0.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
